Fixed: overflow

--- a/Client/web-ui/src/components/AircraftEditView/AircraftEditView.module.scss
+++ b/Client/web-ui/src/components/AircraftEditView/AircraftEditView.module.scss
@@ -3,33 +3,25 @@
 @use "../../styles/components/separators" as separator;
 @use "../../styles/mixins" as *;
 
-//FIXME: overflow
 .AircraftEditView {
   @include blurring;
-  grid-area: 2 / 1 / 3 / end;
-
   display: grid;
-  padding: 0 15rem;
-
-  grid-template-rows: auto;
-  grid-template-areas: "title" "separator" "aircraft-table";
+  height: 100%;
+  padding: 0 10rem;
+  grid-template-rows: min-content min-content max-content;
+  grid-template-areas: 
+    "title"
+    "aircraft-table";
 
   .AircraftEditTitle {
     @include text-shadow;
     @include font.header-1;
-    color: color.$light1;
     grid-area: title;
+    color: color.$light1;
   }
 
-  .Separator {
-    @include separator.style;
-    grid-area: separator;
-    width: 95%;
-    place-self: center;
-    margin: 1rem 0 2rem 0;
-  }
-
-  .AircraftTable {
+  .AircraftsTable {
     grid-area: aircraft-table;
+    z-index: 4;
   }
 }
