--- a/Client/web-ui/src/components/UserRegistration/UserRegistration.module.scss
+++ b/Client/web-ui/src/components/UserRegistration/UserRegistration.module.scss
@@ -9,7 +9,7 @@
   grid-area: 2 / 1 / 3 / end;
   
   height: 100%;
-  padding: 0 15rem;
+  padding: 0 10rem;
   
   display: grid;
   grid-template-rows: auto min-content 8fr;
